admin side navigation test